--- a/app/package.json
+++ b/app/package.json
@@ -16,6 +16,7 @@
         "vite": "^5.0.0"
     },
     "dependencies": {
-        "bootstrap": "^5.3.3"
+        "bootstrap": "^5.3.3",
+        "vue-infinite-loading": "^2.4.5"
     }
 }
